refactor: proposed system's js, add index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
     <head>
         <script src="web3js/bower_components/web3/dist/web3.min.js" charset="utf-8"></script>
-        <script src="index.js" charset="utf-8"></script>
+        <script src="Command.js" charset="utf-8"></script>
     </head>
     <body>
     
